# thebasement

./: .gitignore  README.md  main.keystore  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.test.json  vitest.config.ts
.github/workflows/: release.yml
SQL/: channel_visibility.sql  notification_settings.sql  notification_trigger.sql  user_notifications.sql
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/(mobile)/: layout.tsx  page.tsx
src/app/api/block/: route.ts
src/components/: Auth.tsx
src/components/chat/: DMView.tsx  MessageInput.tsx  MessageItem.tsx  ThreadView.tsx  TypingIndicator.tsx
src/hooks/: useAuth.ts  useAuth.tsx  useAuthToken.ts  useBadges.ts  useBlockedUsers.ts  useChallenges.ts  useChannelMembers.ts  useChat.ts  useDirectMessages.ts  useInvites.ts  useKeyboardShortcuts.ts  useMediaQuery.ts  useNotifications.ts  usePeriodicRefresh.ts  usePinnedMessages.ts  usePresence.ts  useReactions.ts  useRealtimeChannels.ts  useRealtimeNotifications.ts  useSearch.ts  useSpamProtection.ts  useThreads.ts  useTyping.ts  useUpdate.ts
src/lib/: supabase.tsx
src/store/: useChatStore.ts  useToastStore.tsx
src/types/: database.ts
src/utils/: batching.ts  fontStyles.ts
supabase/migrations/: 001_add_chat_features.sql  002_add_user_status.sql  003_reports_and_blocks.sql  threads.sql
tests/: features.test.ts  hooks.test.ts  setup.ts  store.test.ts
(+50 files in other folders)
