[package]
name = "app"
version = "1.1.6"
description = "The Basement - A public chat application"
authors = ["onepeso"]
license = "MIT"
repository = "https://github.com/onepeso/thebasement"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.android]
rustflags = ["-Clink-args=-lsqlite3"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
